rspec-tools/tests/resources/invalid-rules/S200/typescript/rule.adoc
== Why is this an issue?
== How to fix it wrong format


